# MFAF

./: README.md  __init__.py  core.py  exceptions.py  pyproject.toml
tests/: test_core.py
